css/main.css
/* ... */
/* line 1572, ../scss/files/_font-awesome.scss */
.fa-newspaper-o:before {
  content: "\f1ea";
}

/* line 1575, ../scss/files/_font-awesome.scss */
.fa-wifi:before {
  content: "\f1eb";
}

/* line 1578, ../scss/files/_font-awesome.scss */
.fa-calculator:before {
  content: "\f1ec";
}

/* line 1581, ../scss/files/_font-awesome.scss */
.fa-paypal:before {
  content: "\f1ed";
}

/* line 1584, ../scss/files/_font-awesome.scss */
.fa-google-wallet:before {
  content: "\f1ee";
}

/* line 1587, ../scss/files/_font-awesome.scss */
.fa-cc-visa:before {
  content: "\f1f0";
}

/* line 1590, ../scss/files/_font-awesome.scss */
.fa-cc-mastercard:before {
  content: "\f1f1";
}

/* line 1593, ../scss/files/_font-awesome.scss */
.fa-cc-discover:before {
  content: "\f1f2";
}

/* line 1596, ../scss/files/_font-awesome.scss */
.fa-cc-amex:before {
  content: "\f1f3";
}

/* line 1599, ../scss/files/_font-awesome.scss */
.fa-cc-paypal:before {
  content: "\f1f4";
}

/* line 1602, ../scss/files/_font-awesome.scss */
.fa-cc-stripe:before {
  content: "\f1f5";
}

/* line 1605, ../scss/files/_font-awesome.scss */
.fa-bell-slash:before {
  content: "\f1f6";
}

/* line 1608, ../scss/files/_font-awesome.scss */
.fa-bell-slash-o:before {
  content: "\f1f7";
}

/* line 1611, ../scss/files/_font-awesome.scss */
.fa-trash:before {
  content: "\f1f8";
}

/* line 1614, ../scss/files/_font-awesome.scss */
.fa-copyright:before {
  content: "\f1f9";
}

/* line 1617, ../scss/files/_font-awesome.scss */
.fa-at:before {
  content: "\f1fa";
}

/* line 1620, ../scss/files/_font-awesome.scss */
.fa-eyedropper:before {
  content: "\f1fb";
}

/* line 1623, ../scss/files/_font-awesome.scss */
.fa-paint-brush:before {
  content: "\f1fc";
}

/* line 1626, ../scss/files/_font-awesome.scss */
.fa-birthday-cake:before {
  content: "\f1fd";
}

/* line 1629, ../scss/files/_font-awesome.scss */
.fa-area-chart:before {
  content: "\f1fe";
}

/* line 1632, ../scss/files/_font-awesome.scss */
.fa-pie-chart:before {
  content: "\f200";
}

/* line 1635, ../scss/files/_font-awesome.scss */
.fa-line-chart:before {
  content: "\f201";
}

/* line 1638, ../scss/files/_font-awesome.scss */
.fa-lastfm:before {
  content: "\f202";
}

/* line 1641, ../scss/files/_font-awesome.scss */
.fa-lastfm-square:before {
  content: "\f203";
}

/* line 1644, ../scss/files/_font-awesome.scss */
.fa-toggle-off:before {
  content: "\f204";
}

/* line 1647, ../scss/files/_font-awesome.scss */
.fa-toggle-on:before {
  content: "\f205";
}

/* line 1650, ../scss/files/_font-awesome.scss */
.fa-bicycle:before {
  content: "\f206";
}

/* line 1653, ../scss/files/_font-awesome.scss */
.fa-bus:before {
  content: "\f207";
}

/* line 1656, ../scss/files/_font-awesome.scss */
.fa-ioxhost:before {
  content: "\f208";
}

/* line 1659, ../scss/files/_font-awesome.scss */
.fa-angellist:before {
  content: "\f209";
}

/* line 1662, ../scss/files/_font-awesome.scss */
.fa-cc:before {
  content: "\f20a";
}

/* line 1665, ../scss/files/_font-awesome.scss */
.fa-shekel:before,
.fa-sheqel:before,
.fa-ils:before {
  content: "\f20b";
}

/* line 1670, ../scss/files/_font-awesome.scss */
.fa-meanpath:before {
  content: "\f20c";
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
/* line 8, ../scss/files/_author.scss */
body {
  font-family: 'Lato', Helvetica, Helvetica Neue, Arial, sans-serif;
}

/* line 12, ../scss/files/_author.scss */
h1, h2, h3 {
  font-family: 'Bitter', serif;
  line-height: 1.3em;
  color: #282727;
}

/* line 18, ../scss/files/_author.scss */
.main-container {
  background-color: #fafafa;
}

/* line 22, ../scss/files/_author.scss */
#searchIcon, #removeSearchIcon {
  position: absolute;
  top: 15px;
  right: 20px;
  z-index: 10;
  color: #FFFFFF;
}

/* line 30, ../scss/files/_author.scss */
#removeSearchIcon {
  display: none;
  color: rgba(0, 0, 0, 0.6);
}

/* line 35, ../scss/files/_author.scss */
.overlay {
  position: fixed;
  height: 100%;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.3);
  display: none;
  z-index: 1;
}

/* line 44, ../scss/files/_author.scss */
.banner img {
  max-width: 100%;
}

/* line 48, ../scss/files/_author.scss */
.img-768 {
  display: none;
}

/* line 52, ../scss/files/_author.scss */
nav ul {
  padding: 0em;
  margin: 0em;
  list-style-type: none;
  display: none;
}

/* line 59, ../scss/files/_author.scss */
nav ul li a {
  font-family: sans-serif;
  display: inline-block;
  border-bottom: none;
  padding: 0.625em;
}

/* line 68, ../scss/files/_author.scss */
nav ul li {
  border-bottom: 1px solid #fff;
}

/* line 72, ../scss/files/_author.scss */
nav a:hover {
  color: #ffffff;
  background-color: rgba(16, 16, 16, 0.84);
  text-decoration: none;
}

/* line 79, ../scss/files/_author.scss */
.menu-bar-mobile {
  /*background-color: black;*/
  border-bottom: 1px solid #fff;
  overflow: auto;
}

/* line 85, ../scss/files/_author.scss */
.menu-bar-mobile span {
  color: white;
  font-weight: bold;
  text-decoration: none;
  display: block;
  padding: 0.625em;
}

/* line 94, ../scss/files/_author.scss */
.toggle-btn {
  cursor: pointer;
}

/* line 99, ../scss/files/_author.scss */
.pull-left {
  float: left;
  display: block;
}

/* +++++++++++++++++++++++++++++++++++++++++++
    Search Bar
   +++++++++++++++++++++++++++++++++++++++++++
*/
/* line 109, ../scss/files/_author.scss */
#tfnewsearch {
  display: none;
}

/* line 113, ../scss/files/_author.scss */
.tftextinput {
  margin: 0;
  font-size: 0.875em;
  height: 1.750em;
  border: none;
  width: 100%;
  margin-top: 0.625em;
}
/* ... */

